draw an clean option is work

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <h1>Etch-A-Sketch</h1>
     <div class="main-container"></div>
+    <button class="clean">Clean</button>
     <script src="./js/script.js"></script>
 </body>
 </html>
