--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <h1>Etch-A-Sketch</h1>
     <div class="main-container"></div>
+    <div class="select-container">
+        <p>Draw options:</p>
+        <div class="draw-options">
+        </div>
+    </div>
     <button class="clean">Clean</button>
     <script src="./js/script.js"></script>
 </body>
