add pick color option

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <h1>Etch-A-Sketch</h1>
     <div class="main-container"></div>
     <div class="select-container">
-        <p>Draw options:</p>
+        <h2>Draw options:</h2>
         <div class="draw-options">
         </div>
+        <button class="clean">Clean</button>
     </div>
-    <button class="clean">Clean</button>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
