--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Etch-A-Sketch</h1>
     <div class="main-container"></div>
     <div class="select-container">
-        <h2>Draw options:</h2>
+        <h2>Options:</h2>
         <div class="draw-options">
         </div>
-        <button class="clean">Clean</button>
+        <button class="button clean">Clean</button>
     </div>
 
     <script src="./js/script.js"></script>
