--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
+
+    <div class="slidecontainer">
+        <div id="min">MIN</div>
+        <input type="range" min="1" max="100" oninput="sliderFunction(this.value)" value="50" class="slider" id="myRange">
+        <div id="Max">MAX</div>
+    </div>
+
     <div class="main-container"></div>
+    
     <div class="select-container">
         <h2>Options:</h2>
         <div class="draw-options">
