--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Etch-A-Sketch</h1>
 
     <div class="slidecontainer">
-        <div id="min">MIN</div>
-        <input type="range" min="1" max="100" oninput="sliderFunction(this.value)" value="50" class="slider" id="myRange">
         <div id="Max">MAX</div>
+        <input type="range" min="1" max="100" oninput="sliderFunction(this.value)" value="50" class="slider" id="myRange">
+        <div id="Min">MIN</div>
     </div>
 
     <div class="main-container"></div>
@@ -24,7 +24,9 @@
         </div>
         <button class="button clean">Clean</button>
     </div>
-
+    <div class="footer">
+        <p>Copyright © 2023 <a href="mailto:proffery@gmail.com" title=" Dmitry Shamko">Dmitry Shamko</a></p>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
